--- a/Module2-Solution/css/style.css
+++ b/Module2-Solution/css/style.css
@@ -26,7 +26,7 @@ p {
 
 div {
     position: relative;
-    background-color: gray;
+    background-color: wheat;
     border: 3.5px solid black;
     width: 100%;
     margin-left: auto;
@@ -34,12 +34,26 @@ div {
     margin-bottom: auto;
 }
 
-.subHeading-1 {
+.sub-heading1 {
     float: right;
     width: 100px;
     padding: 5px;
     margin: -3px -3px 0px;
-    border: 2.5px solid black;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 125%;
+    font-weight: bold;
+    background-color: orchid;
+
+}
+
+.sub-heading2 {
+    float: right;
+    color: white;
+    width: 100px;
+    padding: 5px;
+    margin: -3px -3px 0px;
+    border: 1px solid black;
     text-align: center;
     font-size: 125%;
     font-weight: bold;
@@ -47,13 +61,13 @@ div {
 
 }
 
-.subHeading-2 {
-    float: right;
+.sub-heading3 {
     color: white;
+    float: right;
     width: 100px;
     padding: 5px;
     margin: -3px -3px 0px;
-    border: 2.5px solid black;
+    border: 1px solid black;
     text-align: center;
     font-size: 125%;
     font-weight: bold;
@@ -61,24 +75,10 @@ div {
 
 }
 
-.subHeading-3 {
-    color: black;
-    float: right;
-    width: 100px;
-    padding: 5px;
-    margin: -3px -3px 0px;
-    border: 2.5px solid black;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
-    background-color: palevioletred;
-
-}
-
 .content {
     padding: 5px;
     border: none;
-    background-color: #f2f2f2;
+    background-color: gray;
     font-family: Helvetica;
     color: black;
     margin: 3px ;
@@ -90,7 +90,15 @@ div {
     width: 90%;
 }
 
-/*Media Query for the Desktop version, from 992px and above*/
+/*Media Query, for Mobile version, 767px and below*/
+@media (max-width: 767px) {
+    .colmn-sm-12 {
+        float: left;
+        width: 100%;
+    }
+}
+
+/*Media Query, for Desktop version, from 992px and above*/
 @media (min-width: 992px) {
     .column-lg-4 {
         float: left;
@@ -98,12 +106,13 @@ div {
     }
 }
 
-/*Media Query for the Tablet version, between 768px and 991px*/
+/*Media Query, for Tablet version, between 768px and 991*/
 @media (min-width: 768px) and (max-width: 991px) {
     .colmn-md-6 {
         float: left;
         width: 50%;
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .colmn-md-12 {
@@ -111,13 +120,5 @@ div {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
-    }
-}
-
-/*Media Query for the Mobile version, from 767px and below*/
-@media (max-width: 767px) {
-    .colmn-sm-12 {
-        float: left;
-        width: 100%;
     }
 }
