--- a/Module3-Solution/css/style.css
+++ b/Module3-Solution/css/style.css
@@ -1,4 +1,3 @@
-style.css
 *{
 	margin: 0;
 	padding: 0;
@@ -7,8 +6,8 @@ style.css
 .navbar{
 
 border: none;
-background-color: black;
-color: #61122F;
+background-color: coral;
+color: black;
 }
 body{
 	background-color: #61122F;
@@ -39,5 +38,6 @@ h2{
 	color: #61122F;
 }
 .navbar-brand{
-font-size: 30px;	
+font-size: 30px;
+background-color: black;
 }
